<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back0"
    android:orientation="vertical" >

    <TextView
        style="@style/textview6"
        android:text="@string/denglu" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_username"
            style="@style/edittext3"
            android:hint="@string/yonghuming" >
        </EditText>

        <EditText
            android:id="@+id/login_password"
            style="@style/edittext4"
            android:hint="@string/mima" >
        </EditText>
    </LinearLayout>

    <LinearLayout style="@style/linearlayout5" >
    </LinearLayout>

    <LinearLayout style="@style/linearlayout6"
        android:weightSum="1">

        <Button
            android:id="@+id/unregister_login_button"
            style="@style/button4"
            android:layout_height="58dp"
            android:background="@drawable/button"
            android:text="@string/youkedenglu"
            android:layout_width="62dp"/>

        <Button
            android:id="@+id/user_login_button"
            style="@style/button4"
            android:background="@drawable/button"
            android:text="@string/denglu"
            android:layout_height="58dp"
            android:layout_width="62dp"/>

        <Button
            android:id="@+id/user_register_button"
            style="@style/button4"
            android:background="@drawable/button"
            android:text="@string/zhuce"
            android:layout_height="58dp"
            android:layout_width="62dp" />
    </LinearLayout>

</LinearLayout>